--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,8 @@ services:
 
   ollama:
     image: ollama/ollama:latest
-    command: /bin/sh -c "ollama serve & ollama pull bge-m3 & wait"
+    entrypoint: /bin/sh
+    command: -c "ollama serve & ollama pull bge-m3 && wait"
     ports:
       - "11435:11434"
     volumes:
