--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,9 @@ services:
       - "6338:6333"
     volumes:
       - ./qdrant_storage:/qdrant/storage
+    networks:
+      rag_net:
+        ipv4_address: 172.28.1.1
 
   ollama:
     image: ollama/ollama:latest
@@ -23,6 +26,9 @@ services:
             - driver: nvidia
               count: 1
               capabilities: [gpu]
+    networks:
+      rag_net:
+        ipv4_address: 172.28.1.2
 
   api:
     build: .
@@ -31,3 +37,13 @@ services:
     depends_on:
       - qdrant
       - ollama
+    networks:
+      - rag_net
+
+networks:
+  rag_net:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 172.28.0.0/16
+          gateway: 172.28.0.1
