Fix hybrid search implementation: Replace inefficient BM25 with FastEmbed (SPLADE) and optimize Docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,8 @@ services:
     build: .
     ports:
       - "8424:9842"
+    volumes:
+      - ./hf_cache:/root/.cache/huggingface
     depends_on:
       - qdrant
       - ollama
