--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,14 @@ services:
     ports:
       - "6338:6333"
     volumes:
-      - ./qdrant_storage:/qdrant/storage
+      - qdrant_storage:/qdrant/storage
 
   ollama:
     image: ollama/ollama:latest
     ports:
       - "11435:11434"
     volumes:
-      - ./ollama_data:/root/.ollama
+      - ollama_data:/root/.ollama
     deploy:
       resources:
         reservations:
@@ -27,7 +27,12 @@ services:
     ports:
       - "8424:9842"
     volumes:
-      - ./hf_cache:/root/.cache/huggingface
+      - hf_cache:/root/.cache/huggingface
     depends_on:
       - qdrant
       - ollama
+
+volumes:
+  qdrant_storage:
+  ollama_data:
+  hf_cache:
