--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,8 +1,7 @@
-fastapi
-uvicorn
-qdrant-client>=1.7.0
-httpx
-fastembed
-openpyxl
-python-multipart
-numpy
+fastapi==0.109.0
+uvicorn==0.27.0
+qdrant-client>=1.10.0
+httpx==0.26.0
+python-multipart==0.0.6
+openpyxl==3.1.2
+fastembed>=0.3.4
