--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,7 +1,7 @@
-fastapi==0.109.0
-uvicorn==0.27.0
+fastapi>=0.109.0
+uvicorn>=0.27.0
 qdrant-client>=1.10.0
-httpx==0.26.0
-python-multipart==0.0.6
-openpyxl==3.1.2
+httpx>=0.26.0
+python-multipart
+openpyxl
 fastembed>=0.3.4
