Enable Ollama GPU and add batching for embeddings

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,14 +14,13 @@ services:
       - "11435:11434"
     volumes:
       - ollama_data:/root/.ollama
-    # Uncomment to enable GPU support if available
-    # deploy:
-    #   resources:
-    #     reservations:
-    #       devices:
-    #         - driver: nvidia
-    #           count: 1
-    #           capabilities: [gpu]
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]
 
   api:
     build: .
